--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,12 @@ android {
     namespace "com.chesz.analyzer"
     compileSdk 35
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+
     defaultConfig {
         applicationId "com.chesz.analyzer"
         minSdk 26
