feat: use mask as app icon + floating button icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
 
     <application
         android:label="chesz"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/mask"
+        android:roundIcon="@drawable/mask"
         android:allowBackup="true"
         android:supportsRtl="true">
 
