ui: use custom boton.png for overlay button and icon.png for app icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
 
     <application
         android:label="chesz"
-        android:icon="@drawable/mask"
-        android:roundIcon="@drawable/mask"
+        android:icon="@drawable/icon"
+        android:roundIcon="@drawable/icon"
         android:allowBackup="true"
         android:supportsRtl="true">
 
