--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
-        android:label="chesz"
+        android:label="chesz__TEST_ICON"
         android:icon="@drawable/icon"
         android:roundIcon="@drawable/icon"
         android:allowBackup="true"
