--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,40 +1,27 @@
-name: Build APK (debug)
+name: Build Debug APK
 
 on:
   workflow_dispatch:
   push:
-    branches: [ "master" ]
+    branches:
+      - "**"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '21'
+          java-version: "17"
 
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v3
+      - uses: gradle/actions/setup-gradle@v4
 
-      - name: Install required Android SDK packages
-        shell: bash
-        run: |
-          set -euo pipefail
-          sdkmanager --version
-          # Accept licenses without failing the step because "yes" gets SIGPIPE
-          yes | sdkmanager --licenses >/dev/null || true
-          sdkmanager "platform-tools" "platforms;android-35" "build-tools;35.0.0"
+      - run: ./gradlew --no-daemon clean assembleDebug
 
-      - name: Build Debug APK (with logs)
-        run: ./gradlew :app:assembleDebug --no-daemon --stacktrace --info
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: chesz-debug-apk
           path: app/build/outputs/apk/debug/*.apk
