Bubble v0: overlay permission + bubble + close tap + close drag X

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
   <application
       android:label="chesz"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round">
 
-    <activity android:name=".MainActivity" android:exported="true">
+    <activity
+        android:name="com.chesz.analyzer.MainActivity"
+        android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
 
-  </application>
+    <service
+        android:name="com.chesz.analyzer.bubble.BubbleService"
+        android:exported="false" />
 
+  </application>
 </manifest>
