--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
 
     <activity
         android:name="com.chesz.analyzer.MainActivity"
-        android:exported="true">
+        android:exported="true"
+        android:excludeFromRecents="true"
+        android:noHistory="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
