--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
   <application
       android:label="chesz"
       android:icon="@mipmap/ic_launcher"
