--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
 
     <service
         android:name="com.chesz.analyzer.bubble.BubbleService"
+        android:foregroundServiceType="specialUse"
         android:exported="false" />
 
   </application>
