Fix: change FGS type to mediaProjection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
     <service
         android:name="com.chesz.analyzer.bubble.BubbleService"
-        android:foregroundServiceType="specialUse"
+        android:foregroundServiceType="mediaProjection"
         android:exported="false" />
 
   </application>
