--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-
-
   <application
       android:label="chesz"
       android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round">
-
+      android:theme="@android:style/Theme.Translucent.NoTitleBar">
     <activity
         android:name="com.chesz.analyzer.MainActivity"
         android:exported="true"
@@ -18,10 +14,6 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-
-    <service
-        android:name="com.chesz.analyzer.bubble.BubbleService"
-        android:exported="false" />
-
+    <service android:name="com.chesz.analyzer.bubble.BubbleService" android:exported="false" />
   </application>
 </manifest>
