--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,6 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
 
-
     defaultConfig {
         applicationId "com.chesz.analyzer"
         minSdk 26
@@ -33,5 +32,5 @@ android {
 }
 
 dependencies {
-    // Por ahora vacío. Se agregará por fases.
+    implementation "androidx.core:core-ktx:1.12.0"
 }
