reset: minimal structure to isolate build error

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,7 @@
         android:theme="@android:style/Theme.Translucent.NoTitleBar">
         <activity
             android:name="com.chesz.analyzer.MainActivity"
-            android:exported="true"
-            android:excludeFromRecents="true"
-            android:noHistory="true">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
