Arquitectura Profesional: Integración de FloatingView y UI mejorada

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,31 +6,22 @@ plugins {
 android {
     namespace "com.chesz.analyzer"
     compileSdk 35
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-
     defaultConfig {
         applicationId "com.chesz.analyzer"
         minSdk 26
         targetSdk 35
         versionCode 1
-        versionName "0.1.0"
+        versionName "1.0.0"
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-        }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-
-    kotlinOptions {
-        jvmTarget = "17"
-    }
+    kotlinOptions { jvmTarget = "17" }
 }
 
 dependencies {
     implementation "androidx.core:core-ktx:1.12.0"
+    // Librería profesional para vistas flotantes
+    implementation "com.github.tuannt:floatingview:1.0.2"
 }
