--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,18 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+}
 plugins {
     id "com.android.application" version "8.6.1" apply false
     id "org.jetbrains.kotlin.android" version "2.0.21" apply false
+}
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
 }
