--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,9 @@ plugins {
     id "com.android.application"
     id "org.jetbrains.kotlin.android"
 }
-
 android {
     namespace "com.chesz.analyzer"
     compileSdk 35
-
     defaultConfig {
         applicationId "com.chesz.analyzer"
         minSdk 26
@@ -14,17 +12,12 @@ android {
         versionCode 1
         versionName "1.0.0"
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-
-    kotlinOptions {
-        jvmTarget = "17"
-    }
+    kotlinOptions { jvmTarget = "17" }
 }
-
 dependencies {
     implementation "androidx.core:core-ktx:1.12.0"
     implementation "com.github.tuannt:floatingview:1.0.2"
