Auto-fix: Sintaxis validada estructuralmente

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,5 @@ plugins {
     id "com.android.application" version "8.6.1" apply false
     id "org.jetbrains.kotlin.android" version "2.0.21" apply false
 }
-
-// Eliminamos la sección allprojects { repositories { ... } } 
-// porque GitHub ya los tiene en settings.gradle.
+# La sección allprojects { repositories { ... } } se elimina 
+# porque GitHub ya la maneja en settings.gradle.
