--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,4 @@ plugins {
     id "com.android.application" version "8.6.1" apply false
     id "org.jetbrains.kotlin.android" version "2.0.21" apply false
 }
+// La sección allprojects se maneja en settings.gradle
