--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,14 @@ plugins {
     id "com.android.application"
     id "org.jetbrains.kotlin.android"
 }
+
 android {
     namespace "com.chesz.analyzer"
-    compileSdk 35
+    compileSdk 34
     defaultConfig {
         applicationId "com.chesz.analyzer"
         minSdk 26
-        targetSdk 35
+        targetSdk 34
         versionCode 1
         versionName "1.0.0"
     }
@@ -18,7 +19,10 @@ android {
     }
     kotlinOptions { jvmTarget = "17" }
 }
+
 dependencies {
     implementation "androidx.core:core-ktx:1.12.0"
+    implementation "androidx.appcompat:appcompat:1.6.1"
+    // Probamos con la versión estable de floatingview
     implementation "com.github.tuannt:floatingview:1.0.2"
 }
