Auto-fix: Sintaxis validada estructuralmente

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,27 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
     <application
-        android:label="chesz"
-        android:theme="@android:style/Theme.Translucent.NoTitleBar">
+        android:allowBackup="true"
+        android:icon="@android:mipmap/sym_def_app_icon"
+        android:label="Chesz Analyzer"
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+        
+        <service 
+            android:name=".floating.FloatingService"
+            android:enabled="true"
+            android:exported="false" />
+
         <activity
-            android:name="com.chesz.analyzer.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="com.chesz.analyzer.bubble.BubbleService" android:exported="false" />
     </application>
 </manifest>
