--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,28 +1,37 @@
 plugins {
-    id "com.android.application"
-    id "org.jetbrains.kotlin.android"
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    namespace "com.chesz.analyzer"
-    compileSdk 34
+    namespace 'com.chesz.analyzer'
+    compileSdk 35
+
     defaultConfig {
         applicationId "com.chesz.analyzer"
         minSdk 26
-        targetSdk 34
+        targetSdk 35
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0"
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+        }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
-    kotlinOptions { jvmTarget = "17" }
+    kotlinOptions {
+        jvmTarget = '11'
+    }
 }
 
 dependencies {
-    implementation "androidx.core:core-ktx:1.12.0"
-    implementation "androidx.appcompat:appcompat:1.6.1"
-    // Probamos con la versión estable de floatingview
-    implementation "com.github.tuannt:floatingview:1.0.2"
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
