--- a/settings.gradle
+++ b/settings.gradle
@@ -6,13 +6,11 @@ pluginManagement {
     }
 }
 dependencyResolutionManagement {
-    // Cambiamos de FAIL_ON_PROJECT_REPOS a PREFER_SETTINGS para dar más libertad
-    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
-        maven { url "https://jitpack.io" }
     }
 }
-rootProject.name = "chesz"
+rootProject.name = "Chesz"
 include ':app'
