--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,19 +6,12 @@ plugins {
 android {
     namespace 'com.chesz.analyzer'
     compileSdk 35
-
     defaultConfig {
         applicationId "com.chesz.analyzer"
         minSdk 26
         targetSdk 35
         versionCode 1
         versionName "1.0"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
@@ -30,6 +23,7 @@ android {
 }
 
 dependencies {
+    // SOLO librerías oficiales de Google/Android. NADA de JitPack.
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
