--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,36 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.chesz.analyzer">
 
-  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <!-- PERMISOS NECESARIOS -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
+    <application
+        android:allowBackup="true"
+        android:label="CHESZ"
+        android:supportsRtl="true"
+        android:theme="@android:style/Theme.Translucent.NoTitleBar">
 
-  <application
-      android:label="chesz"
-      android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round">
+        <!-- ACTIVIDAD PRINCIPAL -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
 
-    <activity
-        android:name="com.chesz.analyzer.MainActivity"
-        android:exported="true"
-        android:excludeFromRecents="true"
-        android:noHistory="true">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
 
-    <service
-        android:name="com.chesz.analyzer.bubble.BubbleService"
-        android:exported="false" />
+        </activity>
 
-  </application>
+        <!-- SERVICIO OVERLAY -->
+        <service
+            android:name=".bubble.BubbleService"
+            android:exported="false"
+            android:foregroundServiceType="mediaProjection"/>
+
+    </application>
+
 </manifest>
