fix(fgs): declare foregroundServiceType specialUse properly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,9 @@
 
         <!-- SERVICIO OVERLAY -->
         <service
-            android:name=".bubble.BubbleService"
-            android:exported="false"
-            />
+        android:name=".bubble.BubbleService"
+        android:exported="false"
+        android:foregroundServiceType="specialUse" />
 
     </application>
 
