--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@android:mipmap/sym_def_app_icon"
+        android:icon="@drawable/icon"
         android:label="Chesz Analyzer"
         android:theme="@style/Theme.AppCompat.NoActionBar">
         
