--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:enabled="true"
             android:exported="false" />
 
-        <activity android:excludeFromRecents="true" android:noHistory="true" android:excludeFromRecents="true" android:noHistory="true"
+        <activity android:excludeFromRecents="true" android:noHistory="true" android:excludeFromRecents="true" android:noHistory="true" android:excludeFromRecents="true" android:noHistory="true"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
